[package]
name = "reproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
serde = {version = "1", features = ["derive" ]}
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "json"] }
axum = {version = "0.6.20", features = ["macros"]}
argh = "0.1.12"
reqwest = {version = "0.11.22", default-features = false, features = ["stream", "rustls-tls-webpki-roots"] }
serde_yaml = "0.9"